--- a/design.kv
+++ b/design.kv
@@ -14,6 +14,9 @@
             Button:
                 text: "Login"
                 on_press: root.login(root.ids.username.text, root.ids.password.text)
+            Label:
+                id: login_wrong
+                text: " "
         GridLayout:
             cols: 2
             Button:
@@ -51,7 +54,7 @@
         cols: 1
         Button:
             text: "Logout"
-            on_press: log_out()
+            on_press: root.log_out()
         Label:
             text: "How do you feel?"
         TextInput:
@@ -59,7 +62,7 @@
         Button:
             text: "Enlighten me"
         Label:
-        text: ""
+            text: " "
         
 
 <RootWidget>
@@ -70,4 +73,4 @@
     SignUpScreenSuccess:
         name: "sign_up_screen_success"
     LoginScreenSuccess:
-    name: "login_screen_success"
+        name: "login_screen_success"
