--- a/design.kv
+++ b/design.kv
@@ -44,6 +44,8 @@
 <SignUpScreen>:
     GridLayout:
         cols: 1
+        padding: 20, 20
+        spacing: 20, 20
         Label:
             text: "Sign up"
         TextInput:
@@ -83,7 +85,6 @@
             id: quote
             text: " "
         
-
 <RootWidget>
     LoginScreen:
         name: "login_screen"
